[tool.poetry]
name = "secrender"
version = "0.5.1"
description = "Render Jinja2 templates using YAML file for substitutions."
authors = ["Tom Wood <tom.wood@civicactions.com>"]
license = "CC0-1.0"

[tool.poetry.dependencies]
python = "^3.6"
click = "~7"
jinja2 = "~2"
pyyaml-include = "~1"
pyyaml = "~5"


[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
black = {version = "^19.10b0", allow-prereleases = true}
pytest = "^5.3.2"
coverage="~5"

[tool.poetry.scripts]
secrender = "secrender.secrender:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
